--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-05-19 12:00+0000\n"
-"PO-Revision-Date: 2021-05-19 14:01+0200\n"
+"PO-Revision-Date: 2021-05-19 16:56+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -332,7 +332,7 @@ msgstr ""
 #: account/templates/account/about.html:13
 msgid ""
 "Ermitteln Sie Ihre Persönlichkeit in wenigen Minuten durch einfache Fragen!"
-msgstr "Determine your personality through easy questions in minutes!"
+msgstr "Determine your personality in minutes by answering easy questions!"
 
 #: account/templates/account/about.html:23
 msgid ""
