--- a/todo.txt
+++ b/todo.txt
@@ -86,3 +86,4 @@ karte aus runde davor noch sichtbar?
 nur online/offline consumer als async für notifications
 weniger als blind -> all in -> blinds werden gesetzt statt dem was man noch hat
 poker flush geht nicht
+spiel starten wenn nicht voll
