--- a/todo.txt
+++ b/todo.txt
@@ -88,3 +88,4 @@ weniger als blind -> all in -> blinds werden gesetzt statt dem was man noch hat
 poker flush geht nicht
 spiel starten wenn nicht voll
 durak linker nachbar von angreifer kann vor angreifer angreifen beim spammen wenn angreifer angreift
+spiel zugucken
