--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-24 13:03+0000\n"
-"PO-Revision-Date: 2021-05-24 15:11+0200\n"
+"POT-Creation-Date: 2021-05-24 13:13+0000\n"
+"PO-Revision-Date: 2021-05-24 15:14+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -733,8 +733,20 @@ msgstr ""
 "more information see below."
 
 #: account/templates/account/impressum.html:12
-msgid "Seitenbetreiber:"
-msgstr "Website operator:"
+msgid ""
+"<h2>Seitenbetreiber:</h2>\n"
+"    Yannik Schroeder<br>\n"
+"    Stresemannstraße 70<br>\n"
+"    26125 Oldenburg<br>\n"
+"    E-Mail: yannik131@web.de<br>\n"
+"    Mobil: 0152 55245049"
+msgstr ""
+"<h2>Website operator:</h2>\n"
+"    Yannik Schroeder<br>\n"
+"    Stresemannstraße 70<br>\n"
+"    26125 Oldenburg<br>\n"
+"    E-mail: yannik131@web.de<br>\n"
+"    Phone: +49 (0) 152 55245049"
 
 #: account/templates/account/impressum.html:21
 msgid ""
@@ -4169,6 +4181,9 @@ msgstr "[Delete]"
 #: wall/templates/wall/post/post_loop.html:81
 msgid "Keine"
 msgstr "None"
+
+#~ msgid "Seitenbetreiber:"
+#~ msgstr "Website operator:"
 
 #~ msgid ""
 #~ "Willkommen auf meiner Website! Hier finden Sie Angaben zur "
