--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-24 13:03+0000\n"
+"POT-Creation-Date: 2021-05-24 13:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -673,7 +673,13 @@ msgid ""
 msgstr ""
 
 #: account/templates/account/impressum.html:12
-msgid "Seitenbetreiber:"
+msgid ""
+"<h2>Seitenbetreiber:</h2>\n"
+"    Yannik Schroeder<br>\n"
+"    Stresemannstraße 70<br>\n"
+"    26125 Oldenburg<br>\n"
+"    E-Mail: yannik131@web.de<br>\n"
+"    Mobil: 0152 55245049"
 msgstr ""
 
 #: account/templates/account/impressum.html:21
