--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-24 13:13+0000\n"
-"PO-Revision-Date: 2021-05-24 15:14+0200\n"
+"POT-Creation-Date: 2021-05-24 13:16+0000\n"
+"PO-Revision-Date: 2021-05-24 15:17+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -738,14 +738,14 @@ msgid ""
 "    Yannik Schroeder<br>\n"
 "    Stresemannstraße 70<br>\n"
 "    26125 Oldenburg<br>\n"
-"    E-Mail: yannik131@web.de<br>\n"
+"    E-Mail: myactivities.net@web.de<br>\n"
 "    Mobil: 0152 55245049"
 msgstr ""
 "<h2>Website operator:</h2>\n"
 "    Yannik Schroeder<br>\n"
 "    Stresemannstraße 70<br>\n"
 "    26125 Oldenburg<br>\n"
-"    E-mail: yannik131@web.de<br>\n"
+"    E-mail: myactivities.net@web.de<br>\n"
 "    Phone: +49 (0) 152 55245049"
 
 #: account/templates/account/impressum.html:21
@@ -824,7 +824,7 @@ msgid ""
 "    26125 Oldenburg</p>\n"
 "    \n"
 "    <p>Telefon: +49 (0) 152 5524 5049<br />\n"
-"    E-Mail: yannik131@web.de</p>\n"
+"    E-Mail: myactivities.net@web.de</p>\n"
 "     <p>Verantwortliche Stelle ist die natürliche oder juristische Person, "
 "die allein oder gemeinsam mit anderen über die Zwecke und Mittel der "
 "Verarbeitung von personenbezogenen Daten (z. B. Namen, E-Mail-Adressen o. "
@@ -1096,7 +1096,7 @@ msgstr ""
 "    26125 Oldenburg </p>\n"
 "    \n"
 "    <p> Phone: +49 (0) 152 5524 5049 <br />\n"
-"    Email: yannik131@web.de </p>\n"
+"    Email: myactivities.net@web.de </p>\n"
 "     <p> The responsible body is the natural or legal person who, alone or "
 "jointly with others, decides on the purposes and means of processing "
 "personal data (e.g. names, email addresses, etc.). </ p >\n"
