--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-24 13:13+0000\n"
+"POT-Creation-Date: 2021-05-24 13:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -678,7 +678,7 @@ msgid ""
 "    Yannik Schroeder<br>\n"
 "    Stresemannstraße 70<br>\n"
 "    26125 Oldenburg<br>\n"
-"    E-Mail: yannik131@web.de<br>\n"
+"    E-Mail: myactivities.net@web.de<br>\n"
 "    Mobil: 0152 55245049"
 msgstr ""
 
@@ -758,7 +758,7 @@ msgid ""
 "    26125 Oldenburg</p>\n"
 "    \n"
 "    <p>Telefon: +49 (0) 152 5524 5049<br />\n"
-"    E-Mail: yannik131@web.de</p>\n"
+"    E-Mail: myactivities.net@web.de</p>\n"
 "     <p>Verantwortliche Stelle ist die natürliche oder juristische Person, "
 "die allein oder gemeinsam mit anderen über die Zwecke und Mittel der "
 "Verarbeitung von personenbezogenen Daten (z. B. Namen, E-Mail-Adressen o. "
