--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-24 13:16+0000\n"
+"POT-Creation-Date: 2021-05-24 14:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1306,8 +1306,8 @@ msgstr ""
 
 #: account/templates/registration/register.html:24
 msgid ""
-"Wo leben Sie derzeit? Das Bestimmen Ihres Ortes kann mehrere Sekunden in "
-"Anspruch nehmen."
+"Wo leben Sie derzeit? Zur eindeutigen Bestimmung bitte auch das Bundesland "
+"angeben. Das Bestimmen Ihres Ortes kann mehrere Sekunden in Anspruch nehmen."
 msgstr ""
 
 #: account/templates/registration/register_done.html:5
