--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-24 13:16+0000\n"
-"PO-Revision-Date: 2021-05-24 15:17+0200\n"
+"POT-Creation-Date: 2021-05-24 14:34+0000\n"
+"PO-Revision-Date: 2021-05-24 16:35+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1655,11 +1655,11 @@ msgstr "Please use the following form to register:"
 
 #: account/templates/registration/register.html:24
 msgid ""
-"Wo leben Sie derzeit? Das Bestimmen Ihres Ortes kann mehrere Sekunden in "
-"Anspruch nehmen."
+"Wo leben Sie derzeit? Zur eindeutigen Bestimmung bitte auch das Bundesland "
+"angeben. Das Bestimmen Ihres Ortes kann mehrere Sekunden in Anspruch nehmen."
 msgstr ""
-"Where do you currently live? Determining your location may take several "
-"seconds."
+"Where do you currently live? Please specify the state and city to avoid "
+"ambiguous results. Determining your location may take several seconds."
 
 #: account/templates/registration/register_done.html:5
 #: account/templates/registration/register_done.html:8
