--- a/todo.txt
+++ b/todo.txt
@@ -91,5 +91,6 @@ ist konferenz beigetreten zeitzone
 call bei nächster runde raise vorm flop falsch angezeigt
 durak 5 spieler
 nicht zeigen side pot anzeigen was man hatte
-verteidigt nicht done bei 4 spielern als letzter?
 durak verteidiger mitsenden und checken
+schummeln: karte mit 2 callbacks, auswählen was gemacht werden soll
+jemand verlässt match 4/5 aber angezeigt a, b, , name1name2
