--- a/todo.txt
+++ b/todo.txt
@@ -92,3 +92,5 @@ call bei nächster runde raise vorm flop falsch angezeigt
 durak 5 spieler
 schummeln: karte mit 2 callbacks, auswählen was gemacht werden soll
 karten offset falsch doko
+
+join audio wenn schon in konferenz geht nicht
