--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-08 14:21+0000\n"
+"POT-Creation-Date: 2021-06-08 15:54+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2918,8 +2918,8 @@ msgid ""
 "das Spiel starten, sobald die Mindestspieleranzahl anwesend ist. Durch Klick "
 "auf den Mülleimer schmeißen Sie Leute raus. Den Chat erreichen Sie im Spiel "
 "über den Chat-Button oben rechts.<br><span style=\"color: yellow\">Noch "
-"nicht begonnene Spiele werden nach 1 Stunde, laufende nach 2 Tagen "
-"automatisch gelöscht.</span>"
+"nicht begonnene Spiele werden nach %(t1)s Minuten, laufende nach %(t2)s "
+"Tagen automatisch gelöscht.</span>"
 msgstr ""
 
 #: multiplayer/templates/multiplayer/lobby.html:22
