--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-08 14:21+0000\n"
-"PO-Revision-Date: 2021-06-08 16:21+0200\n"
+"POT-Creation-Date: 2021-06-08 15:54+0000\n"
+"PO-Revision-Date: 2021-06-08 17:55+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -3486,8 +3486,8 @@ msgid ""
 "das Spiel starten, sobald die Mindestspieleranzahl anwesend ist. Durch Klick "
 "auf den Mülleimer schmeißen Sie Leute raus. Den Chat erreichen Sie im Spiel "
 "über den Chat-Button oben rechts.<br><span style=\"color: yellow\">Noch "
-"nicht begonnene Spiele werden nach 1 Stunde, laufende nach 2 Tagen "
-"automatisch gelöscht.</span>"
+"nicht begonnene Spiele werden nach %(t1)s Minuten, laufende nach %(t2)s "
+"Tagen automatisch gelöscht.</span>"
 msgstr ""
 "Here you can play %(activity)s online (<a href=\"/multiplayer/rules\">you "
 "can find the rules here</a>). If you've created a match, you can start it "
@@ -3495,7 +3495,7 @@ msgstr ""
 "can kick users. Don't rejoin a game that you've been kicked from unless you "
 "have a good reason. During the game, the chat can be accessed by the chat "
 "button in the top right corner.<br><span style=\"color: yellow\">Running "
-"games are deleted after 2 days, all others after 1 hour.</span>"
+"games are deleted after %(t2)s days, all others after %(t1)s minutes.</span>"
 
 #: multiplayer/templates/multiplayer/lobby.html:22
 msgid "Beigetreten"
