--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-12 21:50+0200\n"
-"PO-Revision-Date: 2021-06-12 21:51+0200\n"
+"POT-Creation-Date: 2021-06-13 22:01+0200\n"
+"PO-Revision-Date: 2021-06-13 22:03+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -334,14 +334,18 @@ msgstr "Welcome!"
 
 #: account/templates/account/about.html:10
 msgid ""
-"Hi! Haben Sie gerade nix zu tun und fragen sich, was Sie unternehmen "
-"könnten? Da kann Ihnen diese Seite vielleicht bei helfen! Nach der <a href="
-"\"/account/register\">kostenlosen Registrierung</a> können Sie hier "
-"Folgendes machen: "
+"Hallo!<ul><li>Sie wollen neue Musik hören, wissen aber nicht, welches Genre?"
+"</li><li>Sie würden gerne was am Wochenende unternehmen, wissen aber noch "
+"nicht, was?</li><li>Sie würden gerne ein Instrument lernen, sind sich aber "
+"nicht sicher, welches?</li></ul>Da kann Ihnen diese Seite vielleicht bei "
+"helfen! Nach der <a href=\"/account/register\">kostenlosen Registrierung</a> "
+"können Sie hier Folgendes machen: "
 msgstr ""
-"Hi! You're not doing much at the moment and want to have some suggestions? "
-"Maybe this site can help! After <a href=\"/account/register\">registering "
-"for free</a> you could do the following: "
+"Hi!<ul><li>You want to listen to some new music, but don't know which?</"
+"li><li>You'd like to do something on the weekend, but don't know what?</"
+"li><li>You've always wanted to learn an instrument, but don't know which?</"
+"li></ul>Maybe this site can help! After <a href=\"/account/register"
+"\">registering for free</a> you can do the following: "
 
 #: account/templates/account/about.html:13
 msgid ""
@@ -1408,8 +1412,8 @@ msgid "Mitglieder anzeigen"
 msgstr "Show members"
 
 #: account/templates/account/people_list.html:31
-msgid "Suche nach Nutzername: "
-msgstr "Search by username: "
+msgid "Nutzername: "
+msgstr "Username: "
 
 #: account/templates/account/people_list.html:49
 #: account/templates/account/people_list.html:62
@@ -4235,6 +4239,9 @@ msgstr "[Delete]"
 #: wall/templates/wall/post/post_loop.html:83
 msgid "Keine"
 msgstr "None"
+
+#~ msgid "Suche nach Nutzername: "
+#~ msgstr "Search by username: "
 
 #~ msgid "ist Mitglied folgender Aktivitäten"
 #~ msgstr "is a member of the following activities"
