--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-14 12:57+0200\n"
-"PO-Revision-Date: 2021-06-14 12:58+0200\n"
+"PO-Revision-Date: 2021-06-15 12:09+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1387,7 +1387,7 @@ msgstr ""
 "If you've completed the <a href=\"/character/overview\">personality test</"
 "a>, members are sorted by character congruence in %%. You can also sort by "
 "number of common activities. Why don't you send a friend request to someone "
-"at the end of the list &#128540;"
+"at the end of the list? &#128540;"
 
 #: account/templates/account/people_list.html:13
 msgid "Sortierung auswählen: "
@@ -3068,9 +3068,8 @@ msgid ""
 "können. Durch das Betreten der Lobby treten Sie der entsprechenden Aktivität "
 "bei, falls Sie das noch nicht gemacht haben."
 msgstr ""
-"The following is a list of all the lobbies of the games that you can play "
-"only directly on this website. By joining the lobby you automatically join "
-"its activity, if you haven't done so yet."
+"Here's a list of all the games you can play online right here. By entering "
+"the lobby you automatically join its activity, if you haven't done so yet."
 
 #: competitions/templates/competitions/user_overview.html:15
 msgid "Durak-Lobby"
@@ -3101,7 +3100,7 @@ msgid ""
 msgstr ""
 "You can create and join matches and tournaments after clicking on the 'play "
 "offline'-button on the respective <a href=\"/activity/list/\">activity page</"
-"a>! Logically, this is only available with activities that can actually be "
+"a>! Logically, this is only available for activities that can actually be "
 "played."
 
 #: competitions/templates/competitions/user_overview.html:36
