--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-24 15:43+0200\n"
-"PO-Revision-Date: 2021-07-24 17:30+0200\n"
+"PO-Revision-Date: 2021-07-25 11:09+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1602,7 +1602,7 @@ msgstr "Online: "
 
 #: account/templates/registration/guest_access.html:16
 msgid "Hier ist der Nebeneingang mit Türsteher!"
-msgstr "You're at the backdoor and I'm the doorman!"
+msgstr "This is the side entrance and I'm the doorman!"
 
 #: account/templates/registration/guest_access.html:18
 #, python-format
